# Geant4PursueProject

./: CMakeLists.txt  hitsTest.cpp  simpleLArTPC.gdml
include/: construction.h  particleGun.h  physics.h  rootIO.h  runAction.h  sensitiveDetector.h  stackingAction.h  userAction.h  utilityFunctions.h
src/: construction.cpp  particleGun.cpp  physics.cpp  rootIO.cpp  runAction.cpp  sensitiveDetector.cpp  stackingAction.cpp  userAction.cpp  utilityFunctions.cpp
